working on classic

--- a/classic.ipynb
+++ b/classic.ipynb
@@ -2,28 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is taking too long, we give up.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from helper import load_images_from_folder"
+    "from skimage import io, color\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to load images from directory\n",
+    "def load_images_from_folder(folder, is_gray = True):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        img = io.imread(os.path.join(folder,filename)).astype(np.uint8)\n",
+    "        if img is not None:\n",
+    "            if is_gray:\n",
+    "                images.append(color.rgb2gray(img))\n",
+    "            else:    \n",
+    "                images.append(img)\n",
+    "    return images\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -145,13 +155,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1. 1. ... 0. 0. 0.]\n",
-      " [1. 1. 1. ... 0. 0. 0.]\n",
-      " [1. 1. 1. ... 0. 0. 0.]\n",
+      "[[255 255 255 ...   0   0   0]\n",
+      " [255 255 255 ...   0   0   0]\n",
+      " [255 255 255 ...   0   0   0]\n",
       " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
+      " [  0   0   0 ...   0   0   0]\n",
+      " [  0   0   0 ...   0   0   0]\n",
+      " [  0   0   0 ...   0   0   0]]\n"
      ]
     }
    ],
@@ -165,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,52 +189,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def image_difference(image_A, image_B):\n",
-    "    diff = np.abs(image_A - image_B)\n",
-    "    \n",
-    "    return diff"
+    "def change_detection_cva(images_time1, images_time2, threshold=2):\n",
+    "    # Ensure the input arrays have the same shape\n",
+    "    if images_time1.shape != images_time2.shape:\n",
+    "        raise ValueError(\"Input arrays must have the same shape\")\n",
+    "\n",
+    "    # Initialize an array to store change detection results\n",
+    "    change_images = np.zeros_like(images_time1, dtype=np.uint8)\n",
+    "\n",
+    "    # Calculate change vectors for each pixel\n",
+    "    change_vectors = np.abs(images_time2 - images_time1)\n",
+    "\n",
+    "    # Determine change based on the magnitude of change vectors\n",
+    "    for i in range(images_time1.shape[0]):\n",
+    "        for j in range(images_time1.shape[1]):\n",
+    "            # Calculate the magnitude of the change vector\n",
+    "            magnitude = np.linalg.norm(change_vectors[i, j])\n",
+    "            \n",
+    "            \n",
+    "            change_images[i, j] = magnitude\n",
+    "            \n",
+    "           \n",
+    "\n",
+    "    return change_images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cva_mask = change_detection_cva(images_A, images_B, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cva_mask_thresholded = cva_mask > 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For threshold: 0.05 Jaccard Index: 0.0960272052697665\n",
-      "For threshold: 0.1 Jaccard Index: 0.12059246764029213\n",
-      "For threshold: 0.15 Jaccard Index: 0.13329505611362674\n",
-      "For threshold: 0.2 Jaccard Index: 0.13710098837362628\n",
-      "For threshold: 0.25 Jaccard Index: 0.13437187285081534\n",
-      "For threshold: 0.3 Jaccard Index: 0.1198468428567348\n",
-      "For threshold: 0.35 Jaccard Index: 0.09033413956531579\n",
-      "For threshold: 0.4 Jaccard Index: 0.055803698056589364\n",
-      "For threshold: 0.45 Jaccard Index: 0.03276517185024887\n",
-      "For threshold: 0.5 Jaccard Index: 0.02018238056188819\n"
+      "For CVA Jaccard Index: 0.18301865313962745\n"
      ]
     }
    ],
    "source": [
-    "thresholds = [0.05 , 0.1, 0.15 , 0.2 , 0.25, 0.3 , 0.35 , 0.4, 0.45, 0.5]\n",
-    "\n",
-    "change_mask = image_difference(images_A, images_B)\n",
-    "\n",
-    "for threshold in thresholds:\n",
-    "    diff_thresholded = change_mask > threshold\n",
-    "    jaccard_index = calculate_jaccard_index(diff_thresholded, labels)\n",
-    "    print(\"For threshold:\",threshold,\"Jaccard Index:\", jaccard_index)"
+    "jaccard_index = calculate_jaccard_index(cva_mask_thresholded, labels)\n",
+    "print(\"For CVA Jaccard Index:\", jaccard_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_difference(image_A, image_B):\n",
+    "    diff = np.abs(image_A - image_B)\n",
+    "    return diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "change_mask = image_difference(images_A, images_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "change_mask_thresholded = change_mask > 0.2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Diff Jaccard Index: 0.13710088946685278\n"
+     ]
+    }
+   ],
+   "source": [
+    "jaccard_index = calculate_jaccard_index(change_mask_thresholded, labels)\n",
+    "print(\"For Diff Jaccard Index:\", jaccard_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +316,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio_mask = image_ratioing(images_A, images_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio_mask_thresholded = np.logical_or(ratio_mask > 1 + 0.2, ratio_mask < 1 - 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Ratio Jaccard Index: 0.12635443712328637\n"
+     ]
+    }
+   ],
+   "source": [
+    "jaccard_index = calculate_jaccard_index(ratio_mask_thresholded, labels)\n",
+    "print(\"For Ratio Jaccard Index:\", jaccard_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "votes = ratio_mask_thresholded * 1 + change_mask_thresholded * 1 + cva_mask_thresholded * 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2 3 3 ... 3 3 3]\n",
+      "  [2 2 3 ... 3 3 3]\n",
+      "  [2 3 3 ... 3 3 3]\n",
+      "  ...\n",
+      "  [3 3 3 ... 3 3 3]\n",
+      "  [3 3 3 ... 3 3 3]\n",
+      "  [3 3 3 ... 3 2 3]]\n",
+      "\n",
+      " [[2 3 3 ... 3 3 3]\n",
+      "  [1 3 3 ... 3 3 3]\n",
+      "  [1 3 3 ... 3 3 3]\n",
+      "  ...\n",
+      "  [3 3 3 ... 3 3 3]\n",
+      "  [2 3 3 ... 3 3 3]\n",
+      "  [3 3 3 ... 3 3 3]]\n",
+      "\n",
+      " [[3 3 3 ... 2 3 3]\n",
+      "  [3 3 3 ... 1 3 3]\n",
+      "  [3 3 3 ... 1 2 3]\n",
+      "  ...\n",
+      "  [3 3 3 ... 3 3 3]\n",
+      "  [3 3 3 ... 3 3 3]\n",
+      "  [3 3 3 ... 3 3 3]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[2 2 2 ... 0 0 0]\n",
+      "  [2 2 2 ... 0 0 0]\n",
+      "  [2 2 2 ... 0 0 0]\n",
+      "  ...\n",
+      "  [2 0 0 ... 0 0 0]\n",
+      "  [2 0 0 ... 0 0 0]\n",
+      "  [2 0 0 ... 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  ...\n",
+      "  [3 3 3 ... 1 1 1]\n",
+      "  [3 3 3 ... 1 1 1]\n",
+      "  [3 3 3 ... 1 1 1]]\n",
+      "\n",
+      " [[3 3 3 ... 2 2 2]\n",
+      "  [3 3 3 ... 2 2 2]\n",
+      "  [3 3 3 ... 2 1 1]\n",
+      "  ...\n",
+      "  [1 1 1 ... 3 3 3]\n",
+      "  [1 1 1 ... 3 3 3]\n",
+      "  [1 1 1 ... 3 3 3]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(votes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "voted_images = votes >= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Voting Jaccard Index: 0.14335765773646858\n"
+     ]
+    }
+   ],
+   "source": [
+    "jaccard_index = calculate_jaccard_index(voted_images, labels)\n",
+    "print(\"For Voting Jaccard Index:\", jaccard_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def image_add(image_A, image_B):\n",
+    "#     add = image_A + image_B\n",
+    "    \n",
+    "#     return add"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add_mask = image_add(images_A, images_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ratio_mask = image_ratioing(change_mask, add_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.16896126 0.20463557 0.30228648 ... 0.22616186 0.22125225 0.19014694]\n",
+      " [0.13138847 0.20383067 0.27535348 ... 0.22674713 0.22895976 0.20464347]\n",
+      " [0.18145892 0.27287117 0.29429708 ... 0.21719255 0.22637899 0.22529378]\n",
+      " ...\n",
+      " [0.2459061  0.25100459 0.32658996 ... 0.19905648 0.19778442 0.20211926]\n",
+      " [0.24481122 0.25063888 0.32840446 ... 0.18230673 0.20016583 0.19993947]\n",
+      " [0.24203894 0.25234782 0.3225607  ... 0.1894931  0.1390279  0.17285591]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(ratio_mask[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For threshold: 0.05 Jaccard Index: 0.10966826991364918\n",
+      "For threshold: 0.1 Jaccard Index: 0.12887510710499217\n",
+      "For threshold: 0.15 Jaccard Index: 0.12951161235275704\n",
+      "For threshold: 0.2 Jaccard Index: 0.11561691391321353\n",
+      "For threshold: 0.25 Jaccard Index: 0.08143669125218865\n",
+      "For threshold: 0.3 Jaccard Index: 0.05552389050784794\n",
+      "For threshold: 0.35 Jaccard Index: 0.04103279674188023\n",
+      "For threshold: 0.4 Jaccard Index: 0.030847523603446177\n",
+      "For threshold: 0.45 Jaccard Index: 0.022683360983643944\n",
+      "For threshold: 0.5 Jaccard Index: 0.015962656561496737\n"
+     ]
+    }
+   ],
+   "source": [
+    "# thresholds = [0.05,0.1,0.15,0.2,0.25,0.3,0.35,0.4,0.45,0.5]\n",
+    "\n",
+    "# for threshold in thresholds:\n",
+    "#     diff_thresholded = ratio_mask > threshold\n",
+    "#     jaccard_index = calculate_jaccard_index(diff_thresholded, labels)\n",
+    "#     print(\"For threshold:\",threshold,\"Jaccard Index:\", jaccard_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ratio_mask_square = ratio_mask ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.02854791, 0.04187572, 0.09137711, ..., 0.05114919, 0.04895256,\n",
+       "        0.03615586],\n",
+       "       [0.01726293, 0.04154694, 0.07581954, ..., 0.05141426, 0.05242257,\n",
+       "        0.04187895],\n",
+       "       [0.03292734, 0.07445868, 0.08661077, ..., 0.0471726 , 0.05124745,\n",
+       "        0.05075729],\n",
+       "       ...,\n",
+       "       [0.06046981, 0.0630033 , 0.106661  , ..., 0.03962348, 0.03911868,\n",
+       "        0.04085219],\n",
+       "       [0.05993253, 0.06281985, 0.10784949, ..., 0.03323574, 0.04006636,\n",
+       "        0.03997579],\n",
+       "       [0.05858285, 0.06367942, 0.1040454 , ..., 0.03590764, 0.01932876,\n",
+       "        0.02987917]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ratio_mask_square[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For threshold: 0.001 Jaccard Index: 0.09510171659774246\n",
+      "For threshold: 0.002 Jaccard Index: 0.10591635013051266\n",
+      "For threshold: 0.003 Jaccard Index: 0.11276501100621432\n",
+      "For threshold: 0.004 Jaccard Index: 0.11748527249964094\n",
+      "For threshold: 0.005 Jaccard Index: 0.12090292199823698\n",
+      "For threshold: 0.006 Jaccard Index: 0.12344958894110053\n"
+     ]
+    }
+   ],
+   "source": [
+    "# thresholds = [0.001,0.002,0.003,0.004,0.005,0.006]\n",
+    "\n",
+    "# for threshold in thresholds:\n",
+    "#     diff_thresholded = ratio_mask_square > threshold\n",
+    "#     jaccard_index = calculate_jaccard_index(diff_thresholded, labels)\n",
+    "#     print(\"For threshold:\",threshold,\"Jaccard Index:\", jaccard_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -258,15 +626,15 @@
     }
    ],
    "source": [
-    "thresholds = [0.05 , 0.1, 0.15 , 0.2 , 0.25, 0.3 , 0.35 , 0.4, 0.45, 0.5]\n",
+    "# thresholds = [0.05 , 0.1, 0.15 , 0.2 , 0.25, 0.3 , 0.35 , 0.4, 0.45, 0.5]\n",
     "\n",
     "\n",
-    "change_mask = image_ratioing(images_A, images_B)\n",
+    "# change_mask = image_ratioing(images_A, images_B)\n",
     "\n",
-    "for threshold in thresholds:\n",
-    "    ratio_thresholded = np.logical_or(change_mask > 1 + threshold, change_mask < 1 - threshold)\n",
-    "    jaccard_index = calculate_jaccard_index(ratio_thresholded, labels)\n",
-    "    print(\"For threshold:\",threshold,\"Jaccard Index:\", jaccard_index)"
+    "# for threshold in thresholds:\n",
+    "#     ratio_thresholded = np.logical_or(change_mask > 1 + threshold, change_mask < 1 - threshold)\n",
+    "#     jaccard_index = calculate_jaccard_index(ratio_thresholded, labels)\n",
+    "#     print(\"For threshold:\",threshold,\"Jaccard Index:\", jaccard_index)"
    ]
   },
   {
