working on final

--- a/classic.ipynb
+++ b/classic.ipynb
@@ -24,6 +24,7 @@
     "    for filename in os.listdir(folder):\n",
     "        img = io.imread(os.path.join(folder,filename)).astype(np.uint8)\n",
     "        if img is not None:\n",
+    "            img = img/255\n",
     "            if is_gray:\n",
     "                images.append(color.rgb2gray(img))\n",
     "            else:    \n",
@@ -155,13 +156,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[255 255 255 ...   0   0   0]\n",
-      " [255 255 255 ...   0   0   0]\n",
-      " [255 255 255 ...   0   0   0]\n",
+      "[[1. 1. 1. ... 0. 0. 0.]\n",
+      " [1. 1. 1. ... 0. 0. 0.]\n",
+      " [1. 1. 1. ... 0. 0. 0.]\n",
       " ...\n",
-      " [  0   0   0 ...   0   0   0]\n",
-      " [  0   0   0 ...   0   0   0]\n",
-      " [  0   0   0 ...   0   0   0]]\n"
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -292,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For Diff Jaccard Index: 0.13710088946685278\n"
+      "For Diff Jaccard Index: 0.13710098837362628\n"
      ]
     }
    ],
@@ -318,7 +319,20 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 2.38 GiB for an array with shape (4868, 256, 256) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ratio_mask \u001b[38;5;241m=\u001b[39m \u001b[43mimage_ratioing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimages_A\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimages_B\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[22], line 3\u001b[0m, in \u001b[0;36mimage_ratioing\u001b[1;34m(images_A, images_B)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mimage_ratioing\u001b[39m(images_A, images_B):\n\u001b[0;32m      2\u001b[0m     epsilon \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1e-8\u001b[39m\n\u001b[1;32m----> 3\u001b[0m     ratio \u001b[38;5;241m=\u001b[39m (\u001b[43mimages_A\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mepsilon\u001b[49m) \u001b[38;5;241m/\u001b[39m (images_B \u001b[38;5;241m+\u001b[39m epsilon)\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ratio\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 2.38 GiB for an array with shape (4868, 256, 256) and data type float64"
+     ]
+    }
+   ],
    "source": [
     "ratio_mask = image_ratioing(images_A, images_B)"
    ]
