working on classical

--- a/classic.ipynb
+++ b/classic.ipynb
@@ -208,24 +208,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def change_detection_cva(images_time1, images_time2, threshold=2):\n",
-    "    # Ensure the input arrays have the same shape\n",
+    "def change_detection_cva(images_time1, images_time2):\n",
     "    if images_time1.shape != images_time2.shape:\n",
     "        raise ValueError(\"Input arrays must have the same shape\")\n",
     "\n",
-    "    # Initialize an array to store change detection results\n",
     "    change_images = np.zeros_like(images_time1, dtype=np.uint8)\n",
     "\n",
-    "    # Calculate change vectors for each pixel\n",
     "    change_vectors = np.abs(images_time2 - images_time1)\n",
     "\n",
-    "    # Determine change based on the magnitude of change vectors\n",
+    "\n",
     "    for i in range(images_time1.shape[0]):\n",
     "        for j in range(images_time1.shape[1]):\n",
-    "            # Calculate the magnitude of the change vector\n",
     "            magnitude = np.linalg.norm(change_vectors[i, j])\n",
-    "            \n",
-    "            \n",
     "            change_images[i, j] = magnitude\n",
     "            \n",
     "           \n",
@@ -239,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cva_mask = change_detection_cva(images_A, images_B, 2)"
+    "cva_mask = change_detection_cva(images_A, images_B)"
    ]
   },
   {
