--- a/classic.ipynb
+++ b/classic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,20 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 2.38 GiB for an array with shape (4868, 256, 256) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cva_mask \u001b[38;5;241m=\u001b[39m \u001b[43mchange_detection_cva\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimages_A\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimages_B\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[14], line 7\u001b[0m, in \u001b[0;36mchange_detection_cva\u001b[1;34m(images_time1, images_time2)\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput arrays must have the same shape\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m change_images \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros_like(images_time1, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39muint8)\n\u001b[1;32m----> 7\u001b[0m change_vectors \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mabs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimages_time2\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mimages_time1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(images_time1\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]):\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(images_time1\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]):\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 2.38 GiB for an array with shape (4868, 256, 256) and data type float64"
+     ]
+    }
+   ],
    "source": [
     "cva_mask = change_detection_cva(images_A, images_B)"
    ]
@@ -320,7 +333,7 @@
     "    jaccard_index = calculate_jaccard_index(change_mask_thresholded, labels)\n",
     "    jaccard_index_avg = calculate_jaccard_index_avg(change_mask_thresholded, labels)\n",
     "    print(f\"Threshold:{th} | Our jaccard:{jaccard_index} | Avg jaccard:{jaccard_index_avg}\")\n",
-    "    print(confusion_matrix(labels, change_mask_thresholded))\n",
+    "    # print(confusion_matrix(labels, change_mask_thresholded))\n",
     "    print(\"===========================================================================================================\")"
    ]
   },
