working on report

--- a/classic.ipynb
+++ b/classic.ipynb
@@ -133,7 +133,19 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 2.38 GiB for an array with shape (4868, 256, 256) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m labels \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 2.38 GiB for an array with shape (4868, 256, 256) and data type float64"
+     ]
+    }
+   ],
    "source": [
     "labels = np.array(labels)"
    ]
@@ -209,11 +221,8 @@
    "outputs": [],
    "source": [
     "def change_detection_cva(images_time1, images_time2):\n",
-    "    if images_time1.shape != images_time2.shape:\n",
-    "        raise ValueError(\"Input arrays must have the same shape\")\n",
-    "\n",
+    "    \n",
     "    change_images = np.zeros_like(images_time1, dtype=np.uint8)\n",
-    "\n",
     "    change_vectors = np.abs(images_time2 - images_time1)\n",
     "\n",
     "\n",
@@ -339,7 +348,7 @@
     "    jaccard_index = calculate_jaccard_index(change_mask_thresholded, labels)\n",
     "    jaccard_index_avg = calculate_jaccard_index_avg(change_mask_thresholded, labels)\n",
     "    print(f\"Threshold:{th} | Avg jaccard:{jaccard_index_avg}\")\n",
-    "    # print(confusion_matrix(labels, change_mask_thresholded))\n",
+    "    print(confusion_matrix((labels).astype(np.bool_).flatten(), change_mask_thresholded.flatten()))\n",
     "    print(\"===========================================================================================================\")"
    ]
   },
